logo image uploaded manually

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 	<header>
-		<img class="logo" src="https://i.imgur.com/eVHmEgr.png">
+		<img class="logo" src="assets\logo.jpg">
 		<nav>
 			<ul class="nav-content">
 			<li><sub><img class= "icon" src="https://i.imgur.com/OYtJCVI.png"></sub>
@@ -41,7 +41,7 @@
 
 	<section class = "jumbotron">
 		<div class = "overlay">
-		<h1 class="main_heading">WELCOME TO EDYST LEARN CODING</h1>
+		<h1 class="main_heading">WELCOME  udit TO EDYST LEARN CODING</h1>
     <h3 class="main_content">Let's learn web development in a fun way.</h3>
 
     <div class="btn-group">
