--- a/index.html
+++ b/index.html
@@ -6,18 +6,17 @@
 </head>
 <body>
 	<header>
-		<img class="logo" src="assets\logo.jpg">
 		<nav>
 			<ul class="nav-content">
-			<li><sub><img class= "icon" src="https://i.imgur.com/OYtJCVI.png"></sub>
+			<li><sub> <img class= "icon" src="assets\edyst.png"></sub>
 				<div class="dropdown">
 				<a href="#" class="dropbtn">Pokedex <i class="fas fa-sort-down"></i></a>		
-				<div class="dropdown-content">
-				  <a href="#">Link 1</a>
-				  <a href="#">Link 2</a>
-				  <a href="#">Link 3</a>
-		  		</div>
-		  	</div>
+				    <div class="dropdown-content">
+				        <a href="#">Link 1</a>
+				        <a href="#">Link 2</a>
+				        <a href="#">Link 3</a>
+		  	    	</div>
+		  	    </div>
 			</li>	
 			<li>
 				<div class="dropdown">
@@ -30,10 +29,10 @@
 		  	</div>
 			</li>
 
-			<li><a href="#">ECard games</a></li>
-			<li><a href="#">Pokemon TV</a></li>
-			<li><a href="#">Pokemon Events</a></li>
-			<li><a href="#">About Us</a></li>
+			    <li><a href="#">ECard games</a></li>
+		    	<li><a href="#">Pokemon TV</a></li>
+		    	<li><a href="#">Pokemon Events</a></li>
+			    <li><a href="#">About Us</a></li>
 			</ul>
 		</nav>
 			<a class="button" href="#">Apply</a>
@@ -41,15 +40,15 @@
 
 	<section class = "jumbotron">
 		<div class = "overlay">
-		<h1 class="main_heading">WELCOME  udit TO EDYST LEARN CODING</h1>
-    <h3 class="main_content">Let's learn web development in a fun way.</h3>
+		<h1 class="main_heading" >WELCOME TO EDYST LEARN CODING</h1>
+        <h3 class="main_content">Let's learn web development in a fun way.</h3>
 
-    <div class="btn-group">
-      <button class="apply_button" href="#">Apply Here</button>
-      <button class="schedule" href="#">Register for course</button>
-      <button class="learnmore" href="#">Here you can learn to build beautiful websites <b>Learn more ❯</b></button>
-    </div>
-</div>
+        <div class="btn-group">
+            <button class="apply_button" href="#">Apply Here</button>
+            <button class="schedule" href="#">Register for course</button>
+            <button class="learnmore" href="#">Here you can learn to build beautiful websites <b>Learn more ❯</b></button>
+        </div>
+     </div>
 	</section>
 
 <section class="pokmon">
